Fixing broken style on header links

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -22,7 +22,7 @@ hilite_orange = #FF8832;
 
   h2 
     color: text_black;
-    margin: 10px 0 5px 0;
+    margin: 10px 0 0 0;
 
   h2::selection, .userDescription::selection
     background: hilite_orange;
